log
Wed 04 Oct 2023 10:25:43 PM UTC: 
 tests:  0|5
total_score: 0/70
350430d
Wed 04 Oct 2023 10:53:54 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:11: error: ‘columna’ undeclared (first use in this function)
   58 |     if(i!=columna && n->sudo[9][i] != valor){
      |           ^~~~~~~
sudoku.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:11: error: ‘fila’ undeclared (first use in this function)
   65 |     if(i!=fila && n->sudo[i][9] !=valor){
      |           ^~~~
sudoku.c:72:7: error: unused variable ‘colInicioSub’ [-Werror=unused-variable]
   72 |   int colInicioSub = (9/3) *3;
      |       ^~~~~~~~~~~~
sudoku.c:71:7: error: unused variable ‘filaInicioSub’ [-Werror=unused-variable]
   71 |   int filaInicioSub = (9/3) *3;
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2a79fd9
Wed 04 Oct 2023 10:56:39 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:11: error: ‘columna’ undeclared (first use in this function)
   58 |     if(i!=columna && n->sudo[9][i] != valor){
      |           ^~~~~~~
sudoku.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:11: error: ‘fila’ undeclared (first use in this function)
   65 |     if(i!=fila && n->sudo[i][9] !=valor){
      |           ^~~~
sudoku.c:78:34: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   78 |         pushBack(list, n->sudo[i][j]);
      |                        ~~~~~~~~~~^~~
      |                                  |
      |                                  int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
e2eed2b
Wed 04 Oct 2023 11:18:04 PM UTC: 
 sudoku.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:81:38: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   81 |             pushBack(list, n->sudo[i][j]);
      |                            ~~~~~~~~~~^~~
      |                                      |
      |                                      int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:87:10: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   87 |   return lista;
      |          ^~~~~
      |          list
sudoku.c:87:10: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:54:7: error: unused variable ‘valor’ [-Werror=unused-variable]
   54 |   int valor=n->sudo[9][9];
      |       ^~~~~
sudoku.c: At top level:
sudoku.c:92:3: error: expected identifier or ‘(’ before ‘for’
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |   ^~~
sudoku.c:92:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |                             ^
sudoku.c:92:49: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |                                                 ^~
sudoku.c:102:3: error: expected identifier or ‘(’ before ‘return’
  102 |   return list;
      |   ^~~~~~
sudoku.c:103:1: error: expected identifier or ‘(’ before ‘}’ token
  103 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4e471a6
Wed 04 Oct 2023 11:18:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:81:38: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   81 |             pushBack(list, n->sudo[i][j]);
      |                            ~~~~~~~~~~^~~
      |                                      |
      |                                      int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:54:7: error: unused variable ‘valor’ [-Werror=unused-variable]
   54 |   int valor=n->sudo[9][9];
      |       ^~~~~
sudoku.c: At top level:
sudoku.c:92:3: error: expected identifier or ‘(’ before ‘for’
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |   ^~~
sudoku.c:92:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |                             ^
sudoku.c:92:49: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   92 |   for(int i=filaInicioSub; i<filaInicioSub+3 ; i++ ){
      |                                                 ^~
sudoku.c:102:3: error: expected identifier or ‘(’ before ‘return’
  102 |   return list;
      |   ^~~~~~
sudoku.c:103:1: error: expected identifier or ‘(’ before ‘}’ token
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c6b61a0
Wed 04 Oct 2023 11:18:31 PM UTC: 
 sudoku.c | 14 --------------
 1 file changed, 14 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:81:38: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   81 |             pushBack(list, n->sudo[i][j]);
      |                            ~~~~~~~~~~^~~
      |                                      |
      |                                      int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:54:7: error: unused variable ‘valor’ [-Werror=unused-variable]
   54 |   int valor=n->sudo[9][9];
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b7879a1
Wed 04 Oct 2023 11:19:55 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:80:38: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   80 |             pushBack(list, n->sudo[i][j]);
      |                            ~~~~~~~~~~^~~
      |                                      |
      |                                      int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
cfbe648
Wed 04 Oct 2023 11:24:05 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
9922975
Wed 04 Oct 2023 11:29:04 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
c3c88dc
Wed 04 Oct 2023 11:39:48 PM UTC: 
 sudoku.c | 41 +++++++----------------------------------
 1 file changed, 7 insertions(+), 34 deletions(-)
 tests:  2|4
total_score: 15/70
d994c74
Thu 05 Oct 2023 01:35:33 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:13: error: ‘k’ undeclared (first use in this function)
   51 |         for(k=j+1;k<9;k++){
      |             ^
sudoku.c:51:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2453879
Thu 05 Oct 2023 01:35:41 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
528a72d
